--- a/website/style.css
+++ b/website/style.css
@@ -1,26 +1,33 @@
-html{
-    font-size: 1.6vw;
-}
+
 body{
     background-image: url("./images/sun-came-through-tree-leaves-beautiful-green-nature-sunshine_77829-156.jpg");
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-
+.row {
+    margin: 0;
+}
+.col-lg-6{
+    padding: 0;
+}
 #app{
     width: 100%;
-    height:100vh;
+    min-height:100vh;
     background: #00000098;
     justify-content: center;
-    font-size: 20px;
     font-family: 'Oswald', sans-serif;
     display: flex;
     color: white;
     flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+#app .container{
+    max-width: 80%;
 }
 .headline{
     display: flex;
@@ -61,9 +68,7 @@ body{
  width: 100%; 
  height: 100%;  
 }
-.col-md-6{
-    max-width: 48%;
-}
+
 .form {
     position: relative;
     animation-name: moveLeft;
@@ -71,22 +76,27 @@ body{
     animation-fill-mode: forwards;
 }
 .form-control{
+    font-weight: 100 !important;
+    font-size: 2rem;
     color: white;
     margin-bottom: 2rem;
     background-color:   transparent;
+    letter-spacing: 2px;
 }
 .form-control::placeholder{
-    text-transform: uppercase;
+    text-transform: capitalize;
     letter-spacing: 1px;
+    font-weight: 100;
 color: white;
 }
 .form-control:focus{
-    background-color:   transparent;
+    background-color: transparent;
     border: none;
     box-shadow: 0px 0px 5px 3px rgb(241, 240, 240);
     color: white;
 }
 .btn-dark{
+    font-size: 1.5rem;
     letter-spacing: 2px;
     text-transform: uppercase;
 }
@@ -97,23 +107,29 @@ color: white;
     animation-fill-mode: forwards;
     border:  1px solid white;
     border-radius: 5px;
-    padding: 1.5rem;
-    height: 100%;
+    padding: 0.5rem;
     background-color: rgba(0, 0, 0, 0.301);
-    width: 90%;
     justify-content: center;
     
 }
-#city{
-    text-transform: capitalize;
-    font-size: 5rem;
+#content{
+    font-size: 3rem;
 }
 #date {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 #temp{
     display: flex;
     align-items: center;
     letter-spacing: 0.5px;
-    font-size: 3.5rem;
+    font-size: 3rem;
+}
+
+/* media query set */
+
+@media (min-width : 1100px) {
+    .col-lg-6{
+        max-width: 48%;
+        
+    }
 }
